# pfSense_tools_mikprin

./: .gitignore  LICENSE  MANIFEST.in  README.md  add_static_map_to_file.py  guide.ipynb  setup.cfg
examples/: example_pf_config.xml  staticmap.csv
src/pfsense_tools_mikprin/: add_static_map_to_file.py
templates/: staticmap.xml
tests/: test_script.py
