[metadata]
name = add-staticmap-to-pfsence-mikprin
version = 0.0.1
author = Mikhail Solovyanov
author_email = miksolo@yadnex.ru
description = Add static DHCP to PfSense from CSV file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikprin/pfSense_static_dhcp_from_csv
project_urls =
    Bug Tracker = https://github.com/mikprin/pfSense_static_dhcp_from_csv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux


[options]  
python_requires = >=3.7, <4
package_dir=
    =src
packages=find:
install_requires = 
    pandas
    xml
    